# rust-demystified

./: Cargo.toml  LICENSE  README.md  RUST_NOTES.md
.github/workflows/: master.yml  trait_object_approach.yml
src/: builder.rs  challenge1.rs  cli.rs  closures.rs  conversion.rs  dispatch.rs  lib.rs  lib.rs_old  main.rs  oop_pattern.rs  partial_eq.rs  smart_pointers.rs  traits.rs
src/generics_1/: mod.rs
src/iterators_1/: mod.rs
src/lib/: builder.rs  clap.rs  cli.rs  dispatch.rs  mod.rs  oop_pattern.rs  smart_pointers.rs  traits.rs
src/lib/conversion/: mod.rs
src/sandbox/: mod.rs
src/sandbox/generics_1/: mod.rs
src/sandbox/iterators_1/: mod.rs
src/sandbox/trait_objects_1/: mod.rs
src/trait_objects_1/: mod.rs
