[package]
name = "tutorials"
authors = ["Michael de Silva <michael@inertialbox.com>"]
version = "0.1.0"
edition = "2021"
publish = false

[dependencies]
anyhow = "1.0.66"
futures = "0.3.19"
hyper = { version = "0.14.16", features = ["full"] }
hyper-rustls = { version = "0.23.0", features = ["http1", "http2"] }
tokio = { version = "1.17.0", features = ["full"] }
tokio-util = "0.7.7"
rustls = "0.21.0"
clap = { version = "3", features = ["derive"] }
dotenv = "0.15.0"
env_logger = "0.9.0"
log = "0.4.16"

[dev-dependencies]
test-log = "0.2.10"
