[package]
name = "tutorials"
authors = ["Michael de Silva <michael@inertialbox.com>"]
version = "0.1.0"
edition = "2021"
publish = false

[dependencies]
anyhow = "1.0.66"
futures = "0.3.19"
hyper = { version = "0.14.16", features = ["full"] }
hyper-rustls = { version = "0.23.0", features = ["http1", "http2"] }
tokio = { version = "1.17.0", features = ["full"] }
tokio-util = "0.7.7"
rustls = "0.21.0"
clap = { version = "3", features = ["derive"] }
dotenv = "0.15.0"
env_logger = "0.9.0"
log = "0.4.16"
http-body = "0.4.5"
bufstream = "0.1.3"
base64 = "0.21"
imap-proto = "0.16.1"
rustls-connector = { version = "0.18.0", features = ["dangerous-configuration"] }
hmac = { version = "0.13.0-pre.3" }
pbkdf2 = { version = "0.13.0-pre.0" }
sha2 = { version = "0.11.0-pre.3" }
hex-literal = "^0.4"
hex = "^0.4"
aes-gcm-siv = "^0.11"
aes = "^0.8"
heapless = "^0.8"

axum = { version = "0.6.18", features = ["headers", "tower-log"] }
axum-extra = "0.1.2"

# Axum builds on the types in Tower
tower = { version = "0.4.13", features = ["limit", "load-shed", "filter", "util"] }
tower-http = { version = "0.4.0", features = ["trace", "cors", "catch-panic"] }
tower-layer = "0.3.1"
tower-service = "0.3.1"

[dev-dependencies]
test-log = "0.2.10"
